Changelog
=========


1.8 (unreleased)
----------------

- Add uninstall-profile. [WouterVH]

- Fix marker-file for setuphandlers.py. [WouterVH]

- Add MANIFEST.in to include docs in release. [WouterVH]

- Upgrade imports for Zope 2.13. Remove deprecation warnings.
  [thomasdesvenain]

- Manage python-Levenshtein dependency as a setuptools extras_require.
  [thomasdesvenain]

- French translation.
  [thomasdesvenain]

- Internationalization fixes.
  [thomasdesvenain]

- Added the z3c.autoinclude entry point so this package is automatically loaded
  on Plone 3.3 and above. [WouterVH]

- Remove the old-style refresh.txt and version.txt. Version is now specified in
  setup.py [WouterVH]

- Cleanup install-instructions. [WouterVH]


1.7 (20/08/2010)
----------------

- Added ability to mix unicode and non-unicode keywords and changes.
  Fixes a bug with collective.dancing (and plone.z3cform) upgrading
  form inputs to unicode automagically.
  [dunlapm]

- Restify the CHANGES.txt file.
  [toutpt]

- Add keywords import through genericsetup.
  [toutpt]

- Add a default profile based on Extensions/Install.py.
  [toutpt]

- remove zope2 interface.
  [toutpt]


1.6 (19/03/2009)
----------------

- Fixed handling of non-ASCII Keywords in Controller Python Scripts
  prefs_keywords_action_change.cpy and prefs_keywords_action_delete.cpy [disko]

- Added tests for the above mentioned bugfixes. [disko]

- Added German translation. [disko]


1.6b2 (15-11-2008)
------------------

- No longer assumes that the index name is the same as the name of the
  underlying schema field. [jessesnyder]


1.6b1 (09-09-2008)
------------------

- Eggification from PloneKeywordManager into Products.PloneKeywordManager. This
  package is only supported for Plone 3 now. It may or may not work in Plone 2.5. [dunlapm]

- Added support for multiple keyword indexes. If you have more than one keyword
  field on your content type(s) then you will still be able to manage all of your